Finalising site for Pages hosting

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang = "en">
   <head>
     <title>Discover Letter</title>
-    <link rel = "icon" type = "image/x-icon" href = "favicon.ico">
+    <link rel = "icon" type = "image/x-icon" href = "favi2.ico">
 
 
     <meta charset = "utf-8">
@@ -23,33 +23,42 @@
 
       <br>
 
-      <p class = "grid__col grid__col--1-of-3">
-        My name is Ibrahim (well you know that), writing regarding the Orchard residency program at Apple Marcom. I am a recent graduate of ArtCenter College of Design,
-        with a Bachelor of Fine Arts in Graphic Design and a specialization in motion graphics. I find myself regularly revisiting your words of wisdom during
-        our mentoring conversations; as well as the <em>Camo Collection</em> project you worked on at Stink Studios.
-      </p>
+      <span class = "text-container group">
+        <p class = "grid__col grid__col--1-of-3">
+          My name is Ibrahim (well you know that), writing regarding the Orchard residency program at Apple Marcom. I am a recent graduate of ArtCenter College of Design,
+          with a Bachelor of Fine Arts in Graphic Design and a specialization in motion graphics. I find myself regularly revisiting your words of wisdom during
+          our mentoring conversations; as well as the <em>Camo Collection</em> project you worked on at Stink Studios.
+        </p>
 
-      <br><br>
+        <br><br>
 
-      <p class = "grid__col grid__col--1-of-3">
-        While attending a bookbinding class after school, I was speaking with the teacher’s assistant about advice moving forward. I’d heard a lot of noise
-        about the intensity of ArtCenter’s workload and the expectations for great outcomes. She noted not to let my style dictate the outcome—rather the
-        intention of the work should dictate the style. This advice aligned seamlessly with your advice to me early-on: Focus not on being a specific designer, rather being
-        a “lowercase ‘d’ designer”. To ignore the fanfare around seeking titles, and instead pursuing the skills those titles hold. Essentially becoming the Avatar of all designers—an exciting proposition.
-      </p>
-      <br><br>
+        <p class = "grid__col grid__col--1-of-3">
+          While attending a bookbinding class after school, I was speaking with the teacher’s assistant about advice moving forward. I’d heard a lot of noise
+          about the intensity of ArtCenter’s workload and the expectations for great outcomes. She noted not to let my style dictate the outcome—rather the
+          intention of the work should dictate the style. This advice aligned seamlessly with your advice to me early-on: Focus not on being a specific designer, rather being
+          a “lowercase ‘d’ designer”. To ignore the fanfare around seeking titles, and instead pursuing the skills those titles hold. Essentially becoming the Avatar of all designers—an exciting proposition.
+        </p>
+        <br><br>
 
-      <p class = "grid__col grid__col--1-of-3">
-        The integrity of both of these advices have been instilled into each of my projects. My proudest work, <em>Sorrow</em>, depicts the story of a girl in the country’s poorest congressional district represented by the Mater Dolorosa; and her journey through the socioeconomic claustrophobia of transferring to a new school. My execution reveals the visceral anxiety Melanie feels as she walks the halls of Fieldston—then relief, through reflection and over time. At school,  I onboarded each department’s focus into this project. From direction to color.
-      </p>
+        <p class = "grid__col grid__col--1-of-3">
+          The integrity of both of these advices have been instilled into each of my projects. My proudest work, <em>Sorrow</em>, depicts the story of a girl in the country’s poorest congressional district represented by the Mater Dolorosa; and her journey through the socioeconomic claustrophobia of transferring to a new school. My execution reveals the visceral anxiety Melanie feels as she walks the halls of Fieldston—then relief, through reflection and over time. At school,  I onboarded each department’s focus into this project. From direction to color.
+        </p>
 
-      <br><br>
+        <br><br>
 
-      <p class = "grid__col grid__col--1-of-3">
-        Thank you for taking the time to read this letter. While my site is in my
-        signature, the rest of my application is in the system. Let’s talk again Yego, this time I’ll treat you to some awesome food.
-      </p>
+        <p class = "grid__col grid__col--1-of-3">
+          Thank you for taking the time to read this letter. While my site is in my
+          signature, the rest of my application is in the system. Let’s talk again Yego, this time I’ll treat you to some awesome food.
+        </p>
+      </span>
     </main>
+
+    <footer>
+      <ul>
+        <li><a href = "https://7bibi.design" target = "_blank">Site</a></li>
+        <li>&copy; Ibrahim 2022</li>
+      </ul>
+    </footer>
 
     <script src = "assets/js/main.js"></script>
   </body>
