Edited favicon's legibility

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang = "en">
   <head>
     <title>Discover Letter</title>
-    <link rel = "icon" type = "image/x-icon" href = "favi2.ico">
+    <link rel = "icon" type = "image/x-icon" href = "favi.ico">
 
 
     <meta charset = "utf-8">
